Mon Nov 16 01:36:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_queue_shift_wait): added.

	* vm.c (rb_vm_send, rb_vm_recv): new methods.

	* vm_core.h (rb_queue_t): added condition variable.

	* vm_core.h (rb_vm_t): moved message queue from rb_thread_t.

Mon Nov 16 01:14:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_current): new method RubyVM.current.

	* vm.c (rb_vm_to_s): include address of rb_vm_t in RubyVM#to_s.

Mon Nov 16 01:11:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (ruby_vm_new): create new vm unless initial vm.

	* thread.c (thread_start_func_2): ruby_vm_destruct destroys
	  global_vm_lock.

Mon Nov 16 01:08:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_start_timer_thread),
	  thread_{pthread,win32}.c (native_stop_timer_thread): deal with
	  working count.

	* thread_pthread.c (native_cond_timedwait): use timeval instead of
	  timespec.

	* thread_win32.c (ruby_native_cond_timedwait): added.

Mon Nov 16 01:04:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/public_object.h (ruby_public_object_vmkey): moved
	  rb_fs, rb_output_fs, rb_rs, rb_default_rs, rb_output_rs to VM
	  specific.

	* common.mk (RUBY_H_INCLUDES): include private_object.h.

Sun Nov 15 07:01:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (marshal_dump): needs to set compat_allocator_tbl.

Sat Nov 14 08:48:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (ruby_vm_alone, ruby_vm_main_p): new functions.

	* thread.c (thread_start_func_2): ignore signals on sub VMs.

	* vm.c (rb_vm_mark, vm_memsize): ignore other VM.

	* vm.c (rb_vm_initialize): add last NULL.

Sat Nov 14 03:49:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (native_thread_init_stack): fixed stack star
	  address.

Fri Nov 13 19:56:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (vm_join): does nothing when vm has died.

	* vm.c (rb_vm_free): notify to waiting vm.
